# RepAngAPI

./: .gitignore  build.sh  manage.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: django.yml
api/: models.py  schema.py
api/migrations/: 0001_initial.py  0002_product_category.py
products/: admin.py  apps.py  models.py  schema.py
products/migrations/: 0001_initial.py  0002_category_characteristic_remove_product_category_and_more.py  0002_product_category.py  0003_remove_presentation_characteristics_product_category.py  0004_delete_characteristic_and_more.py
products/tests/: test_product_models.py  test_product_resolvers.py  test_product_schema_validation.py
raw_materials/: admin.py  apps.py  models.py
raw_materials/migrations/: 0001_initial.py  0002_alter_rawmaterial_proveedor.py  0003_alter_rawmaterial_proveedor.py  0004_alter_proveedor_type.py  0005_rename_marca_rawmaterial_brand_and_more.py  0006_remove_rawmaterial_supplier_rawmaterial_suppliers.py  0007_alter_rawmaterial_price_and_more.py  0008_remove_rawmaterial_price.py  0009_rawmaterialsupplier_purchased_date_and_more.py  0010_alter_rawmaterialsupplier_purchased_date.py  0011_alter_rawmaterial_quantity_and_more.py  0012_alter_rawmaterial_quantity.py
raw_materials/tests/: test_brand_model.py  test_brand_supplier_model.py  test_raw_material_brand_model.py  test_raw_material_model.py  test_raw_material_supplier_model.py  test_supplier_model.py
repang_api/: asgi.py  main_schema.py  settings.py  urls.py  wsgi.py
