[tool.poetry]
name = "repangapi"
version = "0.1.0"
description = "Backend Graphql API for Repostería Angeles eComm Site"
authors = ["vanesagh <vanesag@chalmers.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
graphene = "^3.2.2"
graphene-django = "^3.1.3"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^21.2.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
